<resources>
    <string name="app_name">CDLU Mathematics Hub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Links-->
    <string name="notices">http://downloadinformer.com/CDLU/5/notices</string>
    <string name="info">http://downloadinformer.com/CDLU/5/info</string>
    <string name="base_timetable">http://downloadinformer.com/CDLU/5/timetable/</string>
    <string name="downloads">http://downloadinformer.com/CDLU/downloads.php</string>
    <string name="study">http://downloadinformer.com/CDLU/studycount.php</string>

    <!--Study Material-->
    <string name="f1">http://downloadinformer.com/CDLU/StudyMaterial/51</string>
    <string name="f2">http://downloadinformer.com/CDLU/StudyMaterial/52</string>
    <string name="f3">http://downloadinformer.com/CDLU/StudyMaterial/53</string>
    <string name="f4">http://downloadinformer.com/CDLU/StudyMaterial/54</string>
    <string name="f5">http://downloadinformer.com/CDLU/StudyMaterial/55</string>
    <string name="f6">http://downloadinformer.com/CDLU/StudyMaterial/56</string>
    <string name="f7">http://downloadinformer.com/CDLU/StudyMaterial/57</string>
    <string name="f8">http://downloadinformer.com/CDLU/StudyMaterial/58</string>
    <string name="f9">http://downloadinformer.com/CDLU/StudyMaterial/59</string>
    <string name="f10">http://downloadinformer.com/CDLU/StudyMaterial/510</string>
    <string name="p1">http://downloadinformer.com/CDLU/StudyMaterial/21</string>
    <string name="p2">http://downloadinformer.com/CDLU/StudyMaterial/22</string>
    <string name="p3">http://downloadinformer.com/CDLU/StudyMaterial/23</string>
    <string name="p4">http://downloadinformer.com/CDLU/StudyMaterial/24</string>
    
    <string name="fyear">5-Years Course ></string>
    <string name="tyear">2-Years Course ></string>

    <string name="comSyllabus5">Download Complete Syllabus (5 Years)</string>
    <string name="comSyllabus2">Download Complete Syllabus (2 Years)</string>
    <string name="study_material_placeholder">Study Material is newly launched feature so not much content will be available for now. But we\'re adding new material very soon.</string>
    <string name="thank_you">THANK YOU :D</string>
    <string name="next_result">Next Result</string>
    <string name="find_another">Find Another</string>
    <string name="desc_subject_code">Enter Subject Code</string>
    <string name="desc_suggest_study_material">Please provide suitable link and semester name here if you want to suggest Study Material!</string>

    <!--Menu Strings-->
    <string name="menu_pin">Pin To Top</string>
    <string name="share">Share</string>
    <string name="menu_add_to_home">Add To Home Screen</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_unpin">Unpin</string>

    <string name="sem_3">Semester 3 students, we have a wonderful software for you which will make it easy for you to code in HTML.</string>
    <string name="live_html">Download Live Html</string>
    <string name="three_dots">⋮</string>
    <string name="no_content">No content to show. Download files to get started.</string>
    <string name="themes">Themes</string>
    <string name="sort">Sort</string>
    <string name="desc_summary">This feature shows you the result of a whole class or a specific range.</string>
    <string name="_5_years">5-Years</string>
    <string name="_2_years">2-Years</string>
    <string name="semester">Semester:</string>
    <string name="hint_roll_no">Starting Roll No.</string>
    <string name="hint_final_roll">Final Roll No.</string>
    <string name="for_example">For example,</string>
    <string name="find_result">Find Result</string>
    <string name="timetable_disabled">TimeTable is disabled for now. Please check back later</string>
    <string name="credits">Special Thanks to:\n
        Anmol Kamboj\n
        Akash Chabbra\n
        Bhavuk Sardana\n
        Kripal Dhull\n \n

        SPECIALLY FOR 3RD SEMESTER STUDENTS:</string>
    <string name="developer_s_message">Developer\'s Message</string>
</resources>
