<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_back"
    tools:context="com.parassidhu.cdlumaths.fragments.Summary">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/desc_summary"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/intro"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:checked="true"
                android:text="@string/_5_years" />

            <RadioButton
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/intro"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:layout_toEndOf="@id/five"
                android:layout_toRightOf="@id/five"
                android:text="@string/_2_years" />

            <TextView
                android:id="@+id/txtSem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/five"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:text="@string/semester"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/five"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/txtSem"
                android:layout_toRightOf="@id/txtSem"
                android:elevation="3dp"
                android:textSize="16sp"
                app:ms_text_color="@color/grey" />

            <EditText
                android:id="@+id/txtSem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtSem"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_roll_no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtSem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtSem2"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_final_roll"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtSem3"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:elevation="3dp" />

            <EditText
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/total"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:hint="@string/desc_subject_code"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/codehint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/code"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/for_example" />

            <Button
                android:id="@+id/show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtSem3"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/total"
                android:layout_toRightOf="@id/total"
                android:background="@drawable/grad_red"
                android:elevation="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/find_result"
                android:textColor="@color/white"
                android:translationZ="6dp" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
